[gd_scene load_steps=2 format=2]

[ext_resource path="res://environment/EnemySpawner.gd" type="Script" id=1]

[node name="EnemySpawner" type="Position2D"]
script = ExtResource( 1 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 12.0

[node name="FirstSpawnTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="SpawnTimer" to="." method="spawn_enemy"]
[connection signal="timeout" from="FirstSpawnTimer" to="." method="spawn_enemy"]
[connection signal="timeout" from="FirstSpawnTimer" to="SpawnTimer" method="start"]
